# Wusel

./: .gitignore  Cargo.toml  GITHUB_OUTPUT  README.md  todo.txt
.github/workflows/: rust.yml  update-deps.yaml  update-deps.yml
src/: app.rs  config.rs  creature.rs  lib.rs  life.rs  main.rs  renderer.rs  save.rs  simulation.rs  tui.rs  world.rs
src/life/: areas.rs  mod.rs  objects.rs  tasks.rs  world.rs  wusel.rs  wusel.rs~
src/life/world/: areas.rs  items.rs  mod.rs  task_manager.rs  task_test.rs  unit_tests.rs  world2.rs
src/life/wusels/: abilities.rs  mod.rs  needs.rs  relations.rs  tasks.rs
src/model/: creature.rs  mod.rs  world.rs
src/tui/: core.rs  general.rs  mod.rs  world_view.rs
src/tui/screen/: mod.rs  render.rs
src/util/: mod.rs  more_strings.rs  more_strings_test.rs
