[package]
name = "wusel"
version = "0.1.0"
authors = ["nox"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
env_logger = "0.8.1"
log = "0.4.11"
terminal_size = "0.1.13"

# https://docs.rs/tui/0.8.0/tui/: TUI is a library used to build rich terminal users interfaces and dashboards, uses termion as backend.
termion = "1.5"
