[package]
name = "wusel"
version = "2021.0.1"
authors = ["nox"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
env_logger = "0.9.3"
log = "0.4.17"

# https://docs.rs/tui/0.8.0/tui/: TUI is a library used to build rich terminal users interfaces and dashboards, uses termion as backend.
termion = "2.0"
